--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
                 </div>
                 
                 <div class="about-image">
-                    <i class="fas fa-image"></i> Farm Image Placeholder
+                    <img src="aara14.png" alt="Farm Image" />
                 </div>
             </div>
         </div>
