--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
                 </div>
                 
                 <div class="about-image">
-                    <img src="aara13.png" alt="Farm Image" />
+                    <img src="aara13.jpg" alt="Farm Image" />
                 </div>
             </div>
         </div>
