--- a/index.html
+++ b/index.html
@@ -339,6 +339,16 @@
             position: relative;
             overflow: hidden;
         }
+
+        .about-image img{
+              width: 100%;
+              height: 100%;
+              object-fit: contain;      /* use 'cover' if you prefer edge-to-edge crop */
+              object-position: center;  /* keep it centered */
+              display: block;
+              position: relative;
+              z-index: 1;               /* above the pattern overlay */
+        }
         
         .about-image:before {
             content: '';
