--- a/index.html
+++ b/index.html
@@ -360,6 +360,8 @@
             background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none"><path d="M0,50 L100,50 L100,100 L0,100 Z" fill="rgba(255,255,255,0.05)"/></svg>');
             background-size: 50% 50%;
             transform: rotate(45deg);
+            z-index:0;
+            pointer-events:none;
         }
         
         /* Products Section */
