--- a/index.html
+++ b/index.html
@@ -1196,22 +1196,22 @@
             <h2>Gallery</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <i class="fas fa-camera"></i> Product Photos
+                    <img src="aara10.jpg" alt="Product Photos" />
                 </div>
                 <div class="gallery-item">
-                    <i class="fas fa-images"></i> Facility Images
+                    <img src="aara5.jpg" alt="Facility Images" />
                 </div>
                 <div class="gallery-item">
-                    <i class="fas fa-photo-video"></i> Processing Area
+                    <img src="aara11.png" alt="Processing Area" />
                 </div>
                 <div class="gallery-item">
-                    <i class="fas fa-image"></i> Staff at Work
+                    <img src="aara16.png" alt="Staff at Work" /> 
                 </div>
                 <div class="gallery-item">
-                    <i class="fas fa-camera-retro"></i> Delivery Vehicle
+                    <img src="aara17.png" alt="Delivery Vehicle" />
                 </div>
                 <div class="gallery-item">
-                    <i class="fas fa-file-image"></i> Quality Control
+                    <img src="aara2.png" alt="Quality Control" />
                 </div>
             </div>
             <p class="text-center" style="margin-top: 2rem;">Photo placeholders - Add your actual product and facility images here</p>
