--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
         .gallery-item img{
               width:100%;
               height:100%;
-              object-fit:contain;            /* see the whole photo */
+              object-fit:cover;            /* see the whole photo */
               object-position:center;
               display:block;
               position:relative;
