--- a/index.html
+++ b/index.html
@@ -522,21 +522,52 @@
             margin-bottom: 1rem;
         }
         
-        /* Make the guarantee heading visible on blue background */
-        .guarantee-banner h1,
-        .guarantee-banner h2,
-        .guarantee-banner h3,
-        .guarantee-banner .section-title,
-        .guarantee-banner .text-gradient {
-              /* kill any gradient/text-clip utilities it inherits */
-            background: none !important;
-            -webkit-background-clip: border-box !important;
-            background-clip: border-box !important;
-            -webkit-text-fill-color: #fff !important;
-            color: #fff !important;
-            mix-blend-mode: normal !important;   /* in case a blend was applied */
-            text-shadow: 0 1px 2px rgba(0,0,0,.25); /* optional contrast */
-        }
+       /* --- FIX: Guarantee banner always visible --- */
+.guarantee-banner{
+  position: relative;
+  padding: 2rem;
+  border-radius: 12px;
+  color: #fff;
+  overflow: hidden;                 /* keep rounded corners */
+  box-shadow: var(--shadow);
+  margin: 1.5rem 0;
+}
+
+/* Put the gradient on a background layer, not on the text */
+.guarantee-banner::before{
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(135deg, var(--primary-blue) 0%, var(--secondary-blue) 100%);
+  z-index: 0;
+  border-radius: inherit;
+}
+
+/* Ensure content sits above the gradient */
+.guarantee-banner > *{
+  position: relative;
+  z-index: 1;
+  margin: 0;
+}
+
+/* Force heading to solid white (kills any gradient-text utility) */
+.guarantee-banner h1,
+.guarantee-banner h2,
+.guarantee-banner h3,
+.guarantee-banner .section-title{
+  background: none !important;
+  -webkit-background-clip: initial !important;
+  background-clip: initial !important;
+  -webkit-text-fill-color: #fff !important;
+  color: #fff !important;
+  text-shadow: 0 1px 2px rgba(0,0,0,.25);
+  margin-bottom: .5rem;
+}
+
+.guarantee-banner p{
+  color: rgba(255,255,255,.95);
+}
+
 
         
         /* Gallery Section */
