--- a/index.html
+++ b/index.html
@@ -562,6 +562,7 @@
   color: #fff !important;
   text-shadow: 0 1px 2px rgba(0,0,0,.25);
   margin-bottom: .5rem;
+  text-align: center;
 }
 
 .guarantee-banner p{
