--- a/index.html
+++ b/index.html
@@ -567,7 +567,12 @@
 
 .guarantee-banner p{
   color: rgba(255,255,255,.95);
+  text-align: center;        /* center the text */
+  max-width: 70ch;           /* nicer line length */
+  margin: .5rem auto 0;      /* center the block under the heading */
+  line-height: 1.6;          /* optional readability */
 }
+
 
 
         
