--- a/index.html
+++ b/index.html
@@ -1405,7 +1405,12 @@
                 </div>
                 
                 <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3915.195835482996!2d76.925226!3d11.101300000000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTHCsDA2JzA0LjciTiA3NsKwNTUnMzAuOCJF!5e0!3m2!1sen!2sin!4v1623932000000!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+                  <iframe
+                    src="https://www.google.com/maps?q=loc:11.06940550924913,76.99239842883401(Aara%20Farms)&z=17&output=embed"
+                    loading="lazy"
+                    allowfullscreen
+                    referrerpolicy="no-referrer-when-downgrade">
+                  </iframe>
                 </div>
             </div>
         </div>
