--- a/index.html
+++ b/index.html
@@ -1406,12 +1406,13 @@
                 
                 <div class="map-container">
                   <iframe
-                    src="https://www.google.com/maps?q=loc:11.06940550924913,76.99239842883401(Aara%20Farms)&z=17&output=embed"
+                    src="https://www.google.com/maps?q=loc:11.069276167469917,76.99239180468074(Aara%20Farms)&z=17&output=embed&hl=en"
                     loading="lazy"
                     allowfullscreen
                     referrerpolicy="no-referrer-when-downgrade">
                   </iframe>
                 </div>
+
             </div>
         </div>
     </section>
